--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  sqflite: ^2.3.2
+  path: ^1.8.3
+  provider: ^6.1.2
+  intl: ^0.19.0
+  flutter_staggered_grid_view: ^0.7.0
+  uuid: ^4.3.3
 
 dev_dependencies:
   flutter_test:
