--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   sqflite: ^2.3.2
+  sqflite_common_ffi: ^2.3.2+1
   path: ^1.8.3
   provider: ^6.1.2
   intl: ^0.19.0
   flutter_staggered_grid_view: ^0.7.0
   uuid: ^4.3.3
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  firebase_core: ^3.13.0
+  cloud_firestore: ^5.6.6
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +56,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.8
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
